@@ -5,8 +5,8 @@ import com.datahub.authorization.EntitySpec;
 import com.datahub.authorization.FieldResolver;
 import com.datastax.oss.driver.shaded.guava.common.collect.ImmutableList;
 import io.datahubproject.metadata.context.OperationContext;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import javax.annotation.Nonnull;
 
 /** Provides field resolver for entity urn given entitySpec */
@@ -20,6 +20,13 @@ public class EntityUrnFieldResolverProvider implements EntityFieldResolverProvid
   @Override
   public FieldResolver getFieldResolver(
       @Nonnull OperationContext opContext, EntitySpec entitySpec) {
-    return FieldResolver.getResolverFromValues(Collections.singleton(entitySpec.getEntity()));
+    return FieldResolver.getResolverFromFunction(entitySpec, this::getUrn);
+  }
+
+  private FieldResolver.FieldValue getUrn(EntitySpec entitySpec) {
+    if (entitySpec.getEntity().isEmpty()) {
+      return FieldResolver.emptyFieldValue();
+    }
+    return FieldResolver.FieldValue.builder().values(Set.of(entitySpec.getEntity())).build();
   }
 }
